style.css
@font-face {
    font-family: "diablo";
    src: url("media/Diablo_Light.ttf");
}

@font-face {
    font-family: "Akzidenz-Grotesk";
    src: url("media/Akzidenz-grotesk-black.ttf");
}

html {
    background-image: url('media/background.gif');
    background-repeat: repeat;
    background-size: auto;
    background-position: center;
}

body {
    margin: 40px auto;
    max-width: 750px;
}
h1, h2, h3 {
   font-family: "diablo", sans-serif;
}
img.header{
    width: 70%;
    margin-top: 10px;
    margin-bottom: 5px;
}
h3.subtitle{
    text-align: center;
    color: #EF2F27;
    margin-top: 0px;
}
nav b{
    color: #EF2F27;
    font-size: 18px;
}
header{
    margin-top:10px;
    margin-bottom:10px;
    text-align:center;
    border: 1px solid #EF2F27;
    background-color: #1C1B19;
}
div.nav{
    margin: auto;
    text-align: center;
    margin-top: 10px;
    margin-bottom: 10px;
    border: 1px solid #EF2F27;
    background-color: #1C1B19;
    font-family: "diablo", monospace;
}
nav.nav{
    padding:5px;
}
nav a{
    color: #EF2F27;
    font-size: 18px;
}
div.main a{
    color: #EF2F27;
}
div.main{
    border: 1px solid #EF2F27;
    color: #EF2F27;
    background-color: #1C1B19;
    overflow:auto;
    position: relative;
    font-family: Bitstream Vera Sans Mono, monospace;
}
div.centered{
	margin: 5px;
	text-align:center;
}
img.album{
    width:330px;
    height:200px;
    object-position: top;
    object-fit:cover;
}
div.left{
    float: left;
    border-right: 1px solid #EF2F27;
    border-top: 1px solid #EF2F27;
    width: 373px;
    text-align: left;
}
div.right{
    float: right;
    border-left: 1px solid #EF2F27;
    border-top: 1px solid #EF2F27;
    width: 373px;
    text-align: left;
}
table.album{
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 10px;
    text-align: center;
}

table.exif{
    margin-left: auto;
    margin-right: auto;
}
div.albummain{
    text-align: center;
    margin-left: 25px;
    margin-right: 25px;
}
div.footer{
    margin-top: 10px;
    margin-bottom: 5px;
    background-color: #1C1B19;
}

div.section{
	text-align: center;
}
div.article{
	margin: 10px;
}
div.article div.imgparent{
	margin:auto;
	text-align: center;
}
div.article img{
	vertical-align: middle;
	display: inline-block;
}

table, tr, td, th{
    border: 1px solid #EF2F27;
}
footer{
    margin-top: 5px;
    margin-bottom: 5px;
    border: 1px solid #EF2F27;
    text-align: center;
    padding: 5px;
}
.button{
    height: 31px;
    width: 88px;
}

